# tranzlate

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  ruff.yaml
tests/: test_translator.py
tests/fixtures/: test_file.txt  text.html  text.txt
tranzlate/: __init__.py  exceptions.py  translator.py
