[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "tranzlate.__version__"}

[project]
name = "tranzlate"
dynamic = ["version"]
authors = [
  { name="ti-oluwa", email="tioluwa.dev@gmail.com" },
]
maintainers = [
  { name="ti-oluwa", email="tioluwa.dev@gmail.com" },
]
description = "Multilingual translation of text, files, markup and BeautifulSoup objects."
keywords = [
  "translate",
  "translation",
  "google translate",
  "bing translate",
  "yandex translate",
  "translate text",
  "translate files",
  "translate markup",
  "translate html",
  "translate xml",
  "translate BeautifulSoup",
  "detect language",
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = [
    "translators==5.8.9",
    "beautifulsoup4==4.12.2",
    "simple_file_handler>=0.0.1",
]

[project.urls]
"Homepage" = "https://github.com/ti-oluwa/tranzlate"
"Bug Tracker" = "https://github.com/ti-oluwa/tranzlate/issues"
"Repository" = "https://github.com/ti-oluwa/tranzlate"
