[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "tranzlate.__version__"}

[project]
name = "tranzlate"
dynamic = ["version"]
authors = [
  { name="ti-oluwa", email="tioluwa.dev@gmail.com" },
]
maintainers = [
  { name="ti-oluwa", email="tioluwa.dev@gmail.com" },
]
description = "Translate text, files, markup and BeautifulSoup."
keywords = [
  "translate",
  "translation",
  "google translate",
  "bing translate",
  "translate text",
  "translate files",
  "translate markup",
  "translate html",
  "translate xml",
  "beautifulsoup4",
  "detect language",
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = [
    "translators==5.8.9",
    "simple_file_handler>=0.0.1",
    "asgiref==3.8.1",
]

[project.urls]
"Homepage" = "https://github.com/ti-oluwa/tranzlate"
"Bug Tracker" = "https://github.com/ti-oluwa/tranzlate/issues"
"Repository" = "https://github.com/ti-oluwa/tranzlate"
